<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.student.to_dolistapp.NotesActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edttxtTitle"
        android:text="Title"
        android:onClick="eraseTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edtxtContent"
        android:layout_alignEnd="@+id/edtxtContent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtxtContent"
        android:layout_below="@+id/edttxtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:text="Cotent"
        android:onClick="eraseContent"
        android:layout_alignRight="@+id/edttxtTags"
        android:layout_alignEnd="@+id/edttxtTags" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edttxtTags"
        android:layout_below="@+id/edtxtContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:text="Tags"
        android:onClick="eraseTags"
        android:layout_toLeftOf="@+id/swtchVisible"
        android:layout_toStartOf="@+id/swtchVisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdding"
        android:id="@+id/btnAddItem"
        android:layout_below="@+id/edttxtTags"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addItem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvwvList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtvwvResult"
        android:visibility="invisible"
        android:scrollIndicators="right"
        android:minHeight="250dp"
        android:layout_above="@+id/btnQuit"
        android:nestedScrollingEnabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvwvResult"
        android:layout_below="@+id/btnAddItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swtchVisible"
        android:id="@+id/swtchVisible"
        android:layout_alignBottom="@+id/btnAddItem"
        android:layout_alignRight="@+id/txtvwvList"
        android:layout_alignEnd="@+id/txtvwvList" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnQuitApp"
        android:id="@+id/btnQuit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="quitApp" />

</RelativeLayout>
